# substr_evm_pos

./: Cargo.toml  README.md
.github/workflows/: aws-deploy.yml  node-build.yml  node-deploy.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  service.rs
node/src/rpc/: mod.rs
runtime/: Cargo.toml
scripts/: setup_node.sh
